Revert "Parking this" and bump for stable version
This reverts commit 641d3c953d08c2e0760fb0ed21044b07b431292c.