@@ -23,8 +23,6 @@ import java.awt.event.KeyEvent;
 
 import javax.swing.KeyStroke;
 
-import org.kordamp.ikonli.bootstrapicons.BootstrapIcons;
-
 import com.sshtools.ui.swing.AppAction;
 
 /**
@@ -42,20 +40,20 @@ public abstract class AbstractConnectAction extends AbstractAppAction {
 	 */
 	public AbstractConnectAction(boolean onToolBar) {
 		putValue(NAME, VAL_NAME);
-		putValue(SMALL_ICON, loadIcon(BootstrapIcons.PLUG_FILL, 16));
-		putValue(MEDIUM_ICON, loadIcon(BootstrapIcons.PLUG_FILL, 24));
+		putValue(SMALL_ICON, loadIcon("network-wired", 16));
+		putValue(MEDIUM_ICON, loadIcon("network-wired", 24));
 		putValue(SHORT_DESCRIPTION, Messages.getString("AbstractConnectAction.ShortDesc"));
 		putValue(LONG_DESCRIPTION, Messages.getString("AbstractConnectAction.LongDesc"));
 		putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_N, InputEvent.ALT_MASK + InputEvent.SHIFT_MASK));
-		putValue(MNEMONIC_KEY, Integer.valueOf('c'));
-		putValue(ON_MENUBAR, Boolean.valueOf(true));
+		putValue(MNEMONIC_KEY, new Integer('c'));
+		putValue(ON_MENUBAR, new Boolean(true));
 		putValue(MENU_NAME, "File");
-		putValue(MENU_ITEM_GROUP, Integer.valueOf(0));
-		putValue(MENU_ITEM_WEIGHT, Integer.valueOf(1));
-		putValue(ON_TOOLBAR, Boolean.valueOf(onToolBar));
+		putValue(MENU_ITEM_GROUP, new Integer(0));
+		putValue(MENU_ITEM_WEIGHT, new Integer(1));
+		putValue(ON_TOOLBAR, new Boolean(onToolBar));
 		if (onToolBar) {
-			putValue(TOOLBAR_GROUP, Integer.valueOf(0));
-			putValue(TOOLBAR_WEIGHT, Integer.valueOf(0));
+			putValue(TOOLBAR_GROUP, new Integer(0));
+			putValue(TOOLBAR_WEIGHT, new Integer(0));
 			putValue(TEXT_ON_TOOLBAR, Boolean.TRUE);
 		}
 	}
