@@ -19,8 +19,6 @@
 
 package com.sshtools.appframework.actions;
 
-import org.kordamp.ikonli.bootstrapicons.BootstrapIcons;
-
 import com.sshtools.ui.swing.AppAction;
 
 /**
@@ -38,19 +36,19 @@ public abstract class AbstractOptionsAction extends AbstractAppAction {
 
 	public AbstractOptionsAction() {
 		putValue(NAME, Messages.getString("AbstractOptionsAction.Name"));
-		putValue(SMALL_ICON, loadIcon(BootstrapIcons.GEAR, 16));
-		putValue(MEDIUM_ICON, loadIcon(BootstrapIcons.GEAR, 24));
+		putValue(SMALL_ICON, loadIcon("preferences-desktop", 16));
+		putValue(MEDIUM_ICON, loadIcon("preferences-desktop", 24));
 		putValue(SHORT_DESCRIPTION, Messages.getString("AbstractOptionsAction.ShortDesc"));
 		putValue(LONG_DESCRIPTION, Messages.getString("AbstractOptionsAction.LongDesc"));
-		putValue(MNEMONIC_KEY, Integer.valueOf('o'));
+		putValue(MNEMONIC_KEY, new Integer('o'));
 		putValue(ACTION_COMMAND_KEY, "options-command");
-		putValue(ON_MENUBAR, Boolean.valueOf(true));
+		putValue(ON_MENUBAR, new Boolean(true));
 		putValue(MENU_NAME, "Tools");
-		putValue(MENU_ITEM_GROUP, Integer.valueOf(90));
-		putValue(MENU_ITEM_WEIGHT, Integer.valueOf(99));
-		putValue(ON_TOOLBAR, Boolean.valueOf(false));
-		putValue(TOOLBAR_GROUP, Integer.valueOf(90));
-		putValue(TOOLBAR_WEIGHT, Integer.valueOf(0));
+		putValue(MENU_ITEM_GROUP, new Integer(90));
+		putValue(MENU_ITEM_WEIGHT, new Integer(99));
+		putValue(ON_TOOLBAR, new Boolean(false));
+		putValue(TOOLBAR_GROUP, new Integer(90));
+		putValue(TOOLBAR_WEIGHT, new Integer(0));
 
 	}
 
