@@ -24,8 +24,6 @@ import java.awt.event.KeyEvent;
 
 import javax.swing.KeyStroke;
 
-import org.kordamp.ikonli.bootstrapicons.BootstrapIcons;
-
 import com.sshtools.ui.swing.AppAction;
 
 /**
@@ -42,15 +40,15 @@ public abstract class AbstractPasteAction extends AbstractAppAction {
 	public AbstractPasteAction(boolean onToolBar) {
 		putValue(NAME, Messages.getString("AbstractPasteAction.Name"));
 
-		putValue(SMALL_ICON, loadIcon(BootstrapIcons.CLIPBOARD, 16));
-		putValue(MEDIUM_ICON, loadIcon(BootstrapIcons.CLIPBOARD, 24));
+		putValue(SMALL_ICON, loadIcon("edit-paste", 16));
+		putValue(MEDIUM_ICON, loadIcon("edit-paste", 24));
 		putValue(SHORT_DESCRIPTION,
 				Messages.getString("AbstractPasteAction.ShortDesc"));
 		putValue(LONG_DESCRIPTION,
 				Messages.getString("AbstractPasteAction.LongDesc"));
 		putValue(ACCELERATOR_KEY,
 				KeyStroke.getKeyStroke(KeyEvent.VK_V, InputEvent.CTRL_MASK));
-		putValue(MNEMONIC_KEY, Integer.valueOf('p'));
+		putValue(MNEMONIC_KEY, new Integer('p'));
 		putValue(MENU_NAME, "Edit");
 		putValue(ON_MENUBAR, true);
 		putValue(MENU_ITEM_GROUP, 10);
