@@ -48,16 +48,16 @@ public class ToggleToolBarAction extends AppAction {
 		putValue(SMALL_ICON, new EmptyIcon(16, 16));
 		putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_B, InputEvent.ALT_MASK | InputEvent.CTRL_MASK));
 		putValue(LONG_DESCRIPTION, Messages.getString("ToggleToolBarAction.LongDesc"));
-		putValue(MNEMONIC_KEY, Integer.valueOf('t'));
-		putValue(ON_MENUBAR, Boolean.valueOf(true));
+		putValue(MNEMONIC_KEY, new Integer('t'));
+		putValue(ON_MENUBAR, new Boolean(true));
 		putValue(MENU_NAME, "View");
-		putValue(MENU_ITEM_GROUP, Integer.valueOf(90));
-		putValue(MENU_ITEM_WEIGHT, Integer.valueOf(0));
+		putValue(MENU_ITEM_GROUP, new Integer(90));
+		putValue(MENU_ITEM_WEIGHT, new Integer(0));
 		putValue(IS_TOGGLE_BUTTON, Boolean.TRUE);
 		putValue(IS_SELECTED, Boolean.valueOf(panel.isToolBarVisible()));
 		putValue(AppAction.ON_CONTEXT_MENU, Boolean.TRUE);
-		putValue(AppAction.CONTEXT_MENU_GROUP, Integer.valueOf(95));
-		putValue(AppAction.CONTEXT_MENU_WEIGHT, Integer.valueOf(10));
+		putValue(AppAction.CONTEXT_MENU_GROUP, new Integer(95));
+		putValue(AppAction.CONTEXT_MENU_WEIGHT, new Integer(10));
 	}
 
 	/*
